--- a/index.html
+++ b/index.html
@@ -1,43 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="scss/style.css">
-  
-  <title>Sass Crash Course</title>
+  <title>Sass Tutorial</title>
+  <link rel="stylesheet" href="scss1/style.css">
 </head>
+
 <body>
-  <header class="showcase">
-    <div class="container">
-      <nav>
-        <h1 class="logo">Lexitar Web Design</h1>
+  <header>
+    <nav id="main-nav">
+      <div class="wrapper">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Lessons</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
-      </nav>
-
-      <div class="showcase-content">
-        <div>
-           <h1>Make Your Marketing Real</h1>
-           <p class="my-1">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Iste officia maxime a voluptatem numquam suscipit 
-             deleniti sit molestiae itaque alias!
-           </p>
-           <a href="#" class="btn-primary">Learn More</a>
-           <a href="#" class="btn-secondary">Sign Up</a>
-        </div>
-        <img
-          src="https://themesbrand.com/zooki/layouts/images/home-2-img.png"
-          />
       </div>
-
+    </nav>
+    <div class="lead-banner">
+      <img src="img/banner-1.png">
+      <div class="banner-content">
+        <div class="wrapper">
+          <span class="title">Lexitar Web Design</span>
+          <span class="sub-title">Learning in 6 weeks</span>
+        </div>
+      </div>
     </div>
   </header>
 
+  <section id="services">
+    <div class="wrapper">
+      <h1>Services</h1>
+      <p></p>
+      <ul>
+        <li>
+          <img src="img/icon-1.png" />
+          <a href="#">Recording<br>Services</a>
+        </li>
+        <li>
+          <img src="img/icon-2.png" />
+          <a href="#">Get a Printed<br>Certificate</a>
+        </li>
+        <li>
+          <img src="img/icon-3.png" />
+          <a href="#">Lessons via<br>Skype</a>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <div class="lessons-banner">
+    <img src="img/banner-2.png" />
+    <div class="banner-content">
+      <div class="wrapper">
+        <span class="title">Our Lessons</span>
+        <span class="sub-title">Are Easy</span>
+        <ul>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, quae.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, quae.</li>
+          <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, quae.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <section id="projects">
+    <div class="wrapper">
+      <h1>Our projects</h1>
+      <ul>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+        <li><img src="http://placehold.it/150x150"></li>
+      </ul>
+    </div>
+  </section>
+
 </body>
+
 </html>
